@@ -51,6 +51,7 @@ THE SOFTWARE.
     <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
     <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
     <java.level>8</java.level>
+    <concurrency>1</concurrency> <!-- may use e.g. 2C for 2 × (number of cores) -->
   </properties>
 
   <licenses>
@@ -181,14 +182,16 @@ THE SOFTWARE.
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- version specified in grandparent pom -->
         <configuration>
-          <argLine>-Dfile.encoding=UTF-8 -Xmx256m -XX:MaxPermSize=128m</argLine>
+          <argLine>-Dfile.encoding=UTF-8 -Xmx256m</argLine>
           <systemPropertyVariables>
               <!-- use AntClassLoader that supports predictable file handle release -->
               <hudson.ClassicPluginStrategy.useAntClassLoader>true</hudson.ClassicPluginStrategy.useAntClassLoader>
               <hudson.maven.debug>${mavenDebug}</hudson.maven.debug>
               <buildDirectory>${project.build.directory}</buildDirectory>
-              <ignore.random.failures>${ignore.random.failures}</ignore.random.failures>
           </systemPropertyVariables>
+          <reuseForks>true</reuseForks>
+          <forkCount>${concurrency}</forkCount>
+          <rerunFailingTestsCount>4</rerunFailingTestsCount>
         </configuration>
       </plugin>
       <plugin>
@@ -231,5 +234,20 @@ THE SOFTWARE.
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+        <id>skip-tests-on-release</id>
+        <activation>
+          <property>
+            <name>performRelease</name>
+            <value>true</value>
+          </property>
+        </activation>
+        <properties>
+          <skipTests>true</skipTests>
+        </properties>
+    </profile>
+  </profiles>
 
 </project>
